--- a/JavaScript/Leccion02/index.html
+++ b/JavaScript/Leccion02/index.html
@@ -7,7 +7,7 @@
 	<title>JavaScript</title>
 </head>
 <body>
-	<script src="HolaMundo.js">
+	<script src="02-01-TiposDeDatos.js">
 	</script>
 </body>
 </html>
